<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  tools:context="com.fabiotp.quizapp.MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:adjustViewBounds="true"
      android:contentDescription="@string/img_Title"
      android:src="@drawable/titleimage"/>

    <TextView
      style="@style/AppTheme.Title"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Title"/>

    <!-- Question 1 -->
    <TextView
      style="@style/AppTheme.Question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_Question1"/>

    <RadioGroup
      android:id="@+id/rdogrp_question1"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <RadioButton
        android:id="@+id/rdo_q1_a1"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question1_Answer1"/>

      <RadioButton
        android:id="@+id/rdo_q1_a2"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question1_Answer2"/>

      <RadioButton
        android:id="@+id/rdo_q1_a3"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question1_Answer3"/>

      <RadioButton
        android:id="@+id/rdo_q1_a4"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question1_Answer4"/>

    </RadioGroup>

    <!-- Question 2 -->
    <TextView
      style="@style/AppTheme.Question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_Question2"/>

    <RadioGroup
      android:id="@+id/rdogrp_question2"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <RadioButton
        android:id="@+id/rdo_q2_a1"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question2_Answer1"/>

      <RadioButton
        android:id="@+id/rdo_q2_a2"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question2_Answer2"/>

      <RadioButton
        android:id="@+id/rdo_q2_a3"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question2_Answer3"/>

      <RadioButton
        android:id="@+id/rdo_q2_a4"
        style="@style/AppTheme.Answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_Question2_Answer4"/>

    </RadioGroup>

    <!-- Question 3 -->
    <TextView
      style="@style/AppTheme.Question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_Question3"/>

    <CheckBox
      android:id="@+id/cbx_q3_a1"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question3_Answer1"/>

    <CheckBox
      android:id="@+id/cbx_q3_a2"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question3_Answer2"/>

    <CheckBox
      android:id="@+id/cbx_q3_a3"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question3_Answer3"/>

    <CheckBox
      android:id="@+id/cbx_q3_a4"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question3_Answer4"/>

    <!-- Question 4 -->
    <TextView
      style="@style/AppTheme.Question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_Question4"/>

    <CheckBox
      android:id="@+id/cbx_q4_a1"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question4_Answer1"/>

    <CheckBox
      android:id="@+id/cbx_q4_a2"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question4_Answer2"/>

    <CheckBox
      android:id="@+id/cbx_q4_a3"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question4_Answer3"/>

    <CheckBox
      android:id="@+id/cbx_q4_a4"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/txt_Question4_Answer4"/>

    <!-- Question 5 -->
    <TextView
      style="@style/AppTheme.Question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_Question5"/>

    <ImageView
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:adjustViewBounds="true"
      android:contentDescription="@string/img_Question5"
      android:src="@drawable/question5_img"/>

    <EditText
      android:id="@+id/edtxt_q5"
      style="@style/AppTheme.Answers"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/txt_Question5_Answer"/>

    <!-- Reset & Submit -->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <Button
        style="@style/Buttons"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="reset"
        android:text="@string/btn_Reset"/>

      <View
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray">
      </View>

      <Button
        style="@style/Buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="checkScore"
        android:text="@string/btn_Submit"/>
    </LinearLayout>

  </LinearLayout>

</android.support.v4.widget.NestedScrollView>
